# finrag4j

./: .gitignore  README.md  start.bat
backend/: build.bat  compile.bat  pom.xml  run.bat
backend/finrag4j-agent/: pom.xml
backend/finrag4j-auth/: pom.xml
backend/finrag4j-common/: pom.xml
backend/finrag4j-document/: pom.xml
backend/finrag4j-gateway/: pom.xml
backend/finrag4j-java/: .env  Dockerfile  README.md  pom.xml
backend/finrag4j-python/: .gitignore  Dockerfile  README.md  config.py  main.py  pyproject.toml
backend/finrag4j-python/services/: __init__.py  document_parser.py  nacos_service.py  ocr_service.py  text_chunker.py  text_cleaner.py
backend/finrag4j-python/utils/: __init__.py  image_processor.py  text_cleaner.py
backend/finrag4j-search/: pom.xml
backend/sql/: create_tables.sql  init_data.sql
deploy/: .env  .env.dev  .env.devcompany  .env.devhome  .env.prod  .env.test  docker-compose-base.yml  docker-compose.yml  init_data_dirs.sh  start.sh  status.sh  stop.sh
docs/: 00_文档索引.md  01_产品可行性分析.md  02_产品规划路线图.md  03_需求规格说明书.md  04_系统概要设计.md  05_详细设计文档.md  06_产品需求文档PRD.md  06_开发手册.md  08_开发手册.md  09_用户使用手册.md  0_文档索引.md  10_部署手册.md  13_部署手册.md  14_产品白皮书.md  14_应急手册.md  15_Java基座架构说明.md  16_RAG知识库业务说明.md  16_数据库设计说明书.md  17_企业版核心功能说明.md  17_单元测试规范.md  18_集成测试规范.md  19_API接口汇总文档.md  19_CI_CD流程文档.md  20_上线发布Checklist.md  20_单机快速部署手册.md  21_信创国产化部署手册.md  21_容量规划与性能测试方案.md  22_POC交付手册.md  22_日志规范与监控告警.md  23_开源版vs商业版功能对比.md  24_Java_Python分工边界说明.md  24_多环境运行指南.md  26_开发与生产环境运行指南.md  26_配置管理说明.md  27_Python模块依赖分析.md  27_备份与恢复指南.md  28_Python模块测试问题记录.md  29_故障排查手册.md  31_推广方案.md  32_PPT文档索引.md  (+34 more)
frontend/: build.bat  index.html  package-lock.json  package.json  run.bat  vite.config.js
frontend/src/: App.vue
prompts/: 29_项目初始化阶段提示词.md  30_业务开发阶段提示词.md  31_部署配置优化阶段提示词.md  32_接口设计说明提示词.md  33_部署与接口优化阶段提示词.md
scripts/: setup-env.sh
tests/: 01_health_check.py  02_text_clean.py  03_text_split.py  04_parse_file.py  05_ocr.py  06_middleware_check.py  __init__.py  run_all.py
(+222 files in other folders)
