[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "finrag4j-python"
version = "1.0.0"
description = "FinRag4j Python预处理微服务 - 文档解析、OCR识别、文本分块"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
authors = [
    { name = "FinRag4j Team", email = "wangjn1130@163.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
keywords = ["finrag4j", "rag", "ocr", "document-processing", "finance"]
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "python-multipart>=0.0.9",
    "pydantic>=2.6.4",
    "requests>=2.31.0",
    "python-dotenv>=1.0.1",
    "loguru>=0.7.2",
    "nacos-sdk-python>=1.4.0",
    "python-docx>=1.1.0",
    "openpyxl>=3.1.2",
    "python-pptx>=0.6.23",
    "PyPDF2>=3.0.1",
    "paddlepaddle>=2.6.1",
    "paddleocr>=2.8.2",
    "opencv-python>=4.9.0",
    "pillow>=10.2.0",
    "jieba>=0.42.1",
    "nltk>=3.8.1",
    "regex>=2023.12.25",
]

[project.scripts]
finrag4j-python = "main:main"

# 镜像源配置
# 优先级: 清华源 > 阿里云 > PyPI官方
[[tool.uv.index]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[[tool.uv.index]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple"

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.27.0",
    "black>=23.10.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true

# 包发现配置
[tool.setuptools.packages.find]
include = ["services*", "utils*", "config*", "schemas*"]
exclude = ["tests*", "docs*"]
